--- a/blog/templates/blog/entry.html
+++ b/blog/templates/blog/entry.html
@@ -3,6 +3,9 @@
     <head>
         <title>{{ post.title }}</title>
     </head>
+    <nav>
+        <a href="{% url 'blog:index' %}">Belma.blog()</a>
+    </nav>
     <body>
         <h1>{{ post.title }}</h1>
         <p>{{ post.body }}</p>
