--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -3,12 +3,15 @@
     <head>
         <title>Belma's blog</title>
     </head>
+    <nav>
+        <a href="{% url 'blog:index' %}">Belma.blog()</a>
+    </nav>
     <body>
         <h1>Welcome to Belma's Blog!</h1>
+        <ul>
         {% for post in posts %}
-        <h2>{{ post.title }}</h2>
-        <p>{{ post.body }}</p>
+        <h2><a href="{% url 'blog:entry' post.id %}">{{ post.title }}</a></h2>
         {% endfor %}
-
+        </ul>
     </body>
 </html>
