--- a/blog/templates/blog/entry.html
+++ b/blog/templates/blog/entry.html
@@ -1,13 +1,31 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>{{ post.title }}</title>
-    </head>
-    <nav>
-        <a href="{% url 'blog:index' %}">Belma.blog()</a>
-    </nav>
-    <body>
-        <h1>{{ post.title }}</h1>
-        <p>{{ post.body }}</p>
-    </body>
-</html>
+
+<head>
+    <link rel="stylesheet" type="text/css" href="{% static 'blog/style.css' %}">
+    <meta charset="utf-8">
+    <meta name="description" content="Welcome to shark palace.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>{{ post.title }}</title>
+</head>
+
+
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="{% url 'blog:index' %}">Belma.blog()</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <article>
+            <h2>{{ post.title }}</h2>
+            <p>{{ post.body}}</p>
+        </article>
+    </main>
+</body>
+
