--- a/twentyone/static/twentyone/style.css
+++ b/twentyone/static/twentyone/style.css
@@ -40,6 +40,12 @@
 }
 
 /* Layout */
+article aside {
+    background: var(--color-secondary-accent);
+    border-left: 4px solid var(--color-secondary);
+    padding: 0.01rem 0.8rem;
+}
+
 body {
     background: var(--color-bg);
     color: var(--color-text);
@@ -50,17 +56,35 @@ body {
     padding: 0;
 }
 
-main, footer {
+footer,
+main {
     margin: 0 auto;
     max-width: var(--width-content);
     padding: 3rem 1rem;
 }
 
+hr {
+    background-color: var(--color-bg-secondary);
+    border: none;
+    height: 1px;
+    margin: 4rem 0;
+    width: 100%;
+}
+
 section {
     display: flex;
     flex-wrap: wrap;
+    justify-content: var(--justify-important);
 }
 
+section img,
+article img {
+    max-width: 100%;
+}
+
+section pre {
+    overflow: auto;
+}
 
 section aside {
     border: 1px solid var(--color-bg-secondary);
@@ -191,7 +215,16 @@ h4,
 h5,
 h6 {
     line-height: var(--line-height);
+
+    border-radius: var(--border-radius);
+    display: inline-block;
+    font-size: medium;
+    font-weight: bold;
+    margin: 0.5rem 0;
+    padding: 1rem 2rem;
 }
+
+
 
 mark {
     padding: 0.1rem;
