--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -8,29 +8,18 @@
     <meta charset="utf-8">
     <meta name="description" content="Welcome to shark palace.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
     <title>Belma's blog</title>
 </head>
 
-
-
-
-
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="{% url 'blog:index' %}">Belma.blog()</a></li>
-            </ul>
-        </nav>
+            <a href="{% url 'blog:index' %}">Belma.blog()</a>
     </header>
     <main>
         <article>
             <h1>Welcome to Belma's Blog!</h1>
             {% for post in posts %}
-            <h2>
-                <a href="{% url 'blog:entry' post.id %}">{{ post.title }}</a>
-            </h2>
+            <p class="blogtitles"><a href="{% url 'blog:entry' post.id %}">{{ post.title }}</a><p>
             {% endfor %}
         <article>
     </header>
