--- a/blog/templates/blog/entry.html
+++ b/blog/templates/blog/entry.html
@@ -1,3 +1,4 @@
+{% load markdown_extras %}
 {% load static %}
 
 <!DOCTYPE html>
@@ -20,7 +21,7 @@
     <main>
         <article>
             <h1 class="title">{{ post.title }}</h1>
-            <p class="blog-body">{{ post.body }}</p>
+            <div class="markdown">{{ post.body | markdown | safe }}</div>
         </article>
     </main>
 </body>
