--- a/blog/static/blog/style.css
+++ b/blog/static/blog/style.css
@@ -5,25 +5,37 @@
 
 body {
     background: #000;
-	/* last color: #132743; */
     font-family: EB Garamond;
     color: #dedede;
     margin: 0;
     padding: 0;
+    font-size: 16px;
 } 
 
 a {
     color: #eeb9b9;
-	/* last color: #132743; */
+}
+
+li {
+    list-style-type: none;
+    margin: 2px 0px;
 }
 
 .topbar {
-    position: sticky;
     background: #000;
     top: 0px;
-    width: 100%;
-    padding: 2rem 0  2rem 2rem;
+    padding: 2rem 0 2rem 2rem;
     border-bottom: 1px ridge #dedede;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: 7fr 3fr;
+}
+
+.toc {
+    position:sticky;
+    top: 6rem;
 }
 
 .title {
@@ -31,15 +43,13 @@ a {
 }
 
 .blogindex {
-    width: 60%;
     margin: 2rem;
-    white-space: prewrap;
+    font-size: 24px;
 }
 
 .markdown {
     margin: 2rem;
     padding: 0;
-    width: 80%;
 }
 
 .markdown pre {
@@ -48,5 +58,3 @@ a {
     border-radius: 5px;
     padding: 1rem;
 }
-
-
