--- a/blog/templates/blog/entry.html
+++ b/blog/templates/blog/entry.html
@@ -1,5 +1,4 @@
-{% load markdown_extras %}
-{% load static %}
+{% load static markdown_extras %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -7,22 +6,23 @@
 <head>
     <link rel="stylesheet" type="text/css" href="{% static 'blog/style.css' %}">
     <meta charset="utf-8">
-    <meta name="description" content="Welcome to shark palace.">
+    <meta name="description" content="A really cool blog about communism and pancakes.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>{{ post.title }}</title>
 </head>
 
-
 <body>
     <header class="topbar">
-            <a href="{% url 'blog:index' %}">Belma.blog()</a>
+        <a href="{% url 'blog:index' %}">Belma's blog</a>
     </header>
     <main>
+        <div class="grid-container">
         <article>
             <h1 class="title">{{ post.title }}</h1>
             <div class="markdown">{{ post.body | markdown | safe }}</div>
         </article>
+        </div>
     </main>
 </body>
 
