--- a/templates/base.html
+++ b/templates/base.html
@@ -7,11 +7,25 @@
     <link rel="stylesheet" type="text/css" href="/static/style.css"/>
     <title>{% block title %}OllyCodes{% endblock title %}</title>
 </head>
+<nav>
+  <ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">About Me</a></li>
+    <li><a href="/blog/latest.html">Blog</a></li>
+    <li><a href="#">Contact Me</a></li>
+    <li><a 
+        href="https://github.com/ollycodes"
+        target="_blank" 
+        rel="noopener noreferrer">
+            GitHub
+        </a>
+    </li>
+  </ul>
+</nav>
 
 <body>
     <div>
-        {% block content %}
-        {% endblock content %}
+        {{ content|safe }}
     </div>
 </body>
 </html>
