--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 </head>
 <nav>
   <ul>
-    <li><a href="#">Home</a></li>
+    <li><a href="/index.html">Home</a></li>
     <li><a href="#">About Me</a></li>
     <li><a href="/blog/latest.html">Blog</a></li>
     <li><a href="#">Contact Me</a></li>
@@ -25,7 +25,9 @@
 
 <body>
     <div>
+        {% block body %}
         {{ content|safe }}
+        {% endblock body %}
     </div>
 </body>
 </html>
