added Questrial and Merriweather fonts.

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,9 @@
     <meta name="description" content="OllyCode's website."/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" type="text/css" href="/static/style.css"/>
+    <link 
+    rel="stylesheet" 
+    href="https://fonts.googleapis.com/css2?family=Questrial&family=Merriweather"/>
     <title>{% block title %}OllyCodes{% endblock title %}</title>
 </head>
 <nav>
