--- a/static/style.css
+++ b/static/style.css
@@ -22,7 +22,6 @@ nav a:hover {
 }
 
 body {
-    font-family: sans-serif;
     font-size: 16px;
     color: #555;
 }
@@ -31,6 +30,14 @@ body {
     margin: 0 auto;
     max-width: 768px;
     color: #555;
+}
+
+#content h1, h2, h3, h4, h5, h6 {
+    font-family: 'Questrial', sans-serif;
+}
+
+#content p {
+    font-family: 'Merriweather', sans-serif;
 }
 
 #posts {
