--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 </head>
 <nav>
     <a href="/index.html">Home</a>
-    <a href="/about.html">About Me</a>
+    <a href="/about.html">About</a>
     <a href="/blog/latest.html">Blog</a>
     <a 
         href="https://github.com/ollycodes" 
