--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
 </nav>
 
 <body>
-    <div id="content">
+    <div class="content">
         {% block body %}
         {{ content|safe }}
         {% endblock body %}
