added catppuccin color scheme to website.

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" type="text/css" href="/static/style.css"/>
     <link 
-    rel="stylesheet" 
-    href="https://fonts.googleapis.com/css2?family=Questrial&family=Merriweather"/>
+        rel="stylesheet" 
+        href="/static/catpuccin-mocha.css" 
+        media="(prefers-color-scheme: dark)"
+    />
+    <link 
+        rel="stylesheet" 
+        href="https://fonts.googleapis.com/css2?family=Questrial&family=Merriweather"
+    />
     <title>{% block title %}OllyCodes{% endblock title %}</title>
 </head>
 <nav>
