--- a/static/style.css
+++ b/static/style.css
@@ -1,61 +1,104 @@
+:root {
+    /* Cattppuccin Frappe */
+	--rosewater: #f2d5cf;
+	--flamingo: #eebebe;
+	--pink: #f4b8e4;
+	--mauve: #ca9ee6;
+	--red: #e78284;
+	--maroon: #ea999c;
+	--peach: #ef9f76;
+	--yellow: #e5c890;
+	--green: #a6d189;
+	--teal: #81c8be;
+	--sky: #99d1db;
+	--sapphire: #85c1dc;
+	--blue: #8caaee;
+	--lavender: #babbf1;
+	--text: #c6d0f5;
+	--subtext1: #b5bfe2;
+	--subtext0: #a5adce;
+	--overlay2: #949cbb;
+	--overlay1: #838ba7;
+	--overlay0: #737994;
+	--surface2: #626880;
+	--surface1: #51576d;
+	--surface0: #414559;
+	--base: #303446;
+	--mantle: #292c3c;
+	--crust: #232634;
+}
+
 *, *:before, *:after {
     box-sizing: border-box;
+}
+
+a {
+    text-decoration: none;
+    font-weight: bold;
+    text-decoration: 2px underline transparent;
+    transition: text-decoration 300ms ease;
+}
+
+a:hover {
+    text-decoration-color: var(--pink);
+    color: var(--pink);
 }
 
 nav {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    border-bottom: 1px solid #eee;
+    background-color: var(--surface0);
+    border-radius: 50px;
     height: 50px;
+    font-size: x-large;
 }
 
 nav a {
-    text-decoration: none;
-    color: black;
-    font-weight: bold;
-    margin-right: 20px;
+    color: var(--text);
 }
 
-nav a:hover {
-    color: #9b59b6;
-}
-
-body {
-    font-size: 16px;
-    color: black;
+html {
+    background-color: var(--base);
 }
 
 .content {
+    font-size: 16px;
     margin: 0 auto;
     max-width: 768px;
 }
 
 .content h1, h2, h3, h4, h5, h6 {
     font-family: 'Questrial', sans-serif;
-    color: #9b59b6;
+    color: var(--mauve);
 }
 
 .content p {
     font-family: 'Merriweather', sans-serif;
-    color: black;
+    color: var(--text);
+}
+
+.content a {
+    color: var(--lavender);
+}
+
+.content a:hover {
+    color: var(--pink);
 }
 
 .latest-posts {
     margin: 0 0 10px 0;
 }
 
-.latest-posts a {
-    color: black;
-    font-weight: bold;
-}
-
 .latest-posts p {
     font-family: 'Questrial', sans-serif;
-    color: #a9a9a9;
     margin: 0;
 }
 
+.latest-posts a {
+    color: var(--text);
+}
+
 .latest-posts a:hover {
-    color: #9b59b6;
+    color: var(--pink);
 }
