--- a/templates/latest.html
+++ b/templates/latest.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %}
 
+{% block title %}Latest{% endblock title %}
+
 {% block body %}
 <h1> Latest </h1>
     {% for post in posts %}
     <div class="latest-posts">
         <a href="{{ post.href }}">{{ post.title }}</a>
-        <p>{{ post.date }}</p>
+        <p>{{ post.fdate }}</p>
     </div>
     {% endfor %}
 {% endblock body %}
