--- a/static/style.css
+++ b/static/style.css
@@ -61,8 +61,7 @@ nav {
     justify-content: space-evenly;
     align-items: center;
     background-color: var(--surface0);
-    border-radius: 50px;
-    height: 50px;
+    height: 3vh;
     font-size: x-large;
 }
 
@@ -78,10 +77,26 @@ html {
     background-color: var(--base);
 }
 
+body {
+    margin: 0;
+}
+
 .content {
     font-size: 16px;
-    margin: 0 auto;
     max-width: 768px;
+    margin: 0 auto;
+}
+
+@media (min-width: 800px) {
+    .content {
+        margin: 0 auto;
+    }
+}
+
+@media (max-width: 799px) {
+    .content {
+        margin: auto 4rem;
+    }
 }
 
 .content h1, h2, h3, h4, h5, h6 {
