added resume page, resume css style, and the file logic needed for the ssg script.

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,8 @@
     <a href="/index.html">Home</a>
     <a href="/about.html">About Me</a>
     <a href="/blog/latest.html">Blog</a>
-    <a 
+    <a href="/resume.html">Resume</a>
+    <a
         href="https://github.com/ollycodes" 
         target="_blank" 
         rel="noopener noreferrer">
