--- a/static/style.css
+++ b/static/style.css
@@ -61,8 +61,8 @@ nav {
     justify-content: space-evenly;
     align-items: center;
     background-color: var(--surface0);
-    height: 3vh;
-    font-size: x-large;
+    height: 4vh;
+    font-size: normal;
 }
 
 nav a {
@@ -104,13 +104,26 @@ body {
     color: var(--mauve);
 }
 
-.content p {
+.content p, .content ol, .content ul {
     font-family: 'Merriweather', sans-serif;
+    color: var(--text);
+    line-height: 1.7;
+}
+
+.content pre {
+    padding: 5px;
+    background: var(--mantle);
+    border: solid 2px var(--lavender);
+}
+
+.content code {
+    font-family: monospace;
     color: var(--text);
 }
 
 .content a {
     color: var(--lavender);
+    line-height: normal;
 }
 
 .content a:hover {
