decluttered css styles, added table styles, simplified prefers-color-schemes.

--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,4 @@
-/* Defaults */
+/* Styling Defaults */
 :root {
     /* Cattppuccin Frappe */
 	--rosewater: #f2d5cf;
@@ -29,6 +29,38 @@
 	--crust: #232634;
 }
 
+@media (prefers-color-scheme: dark) {
+    :root {
+        /* Cattppuccin Mocha */
+        --rosewater: #f5e0dc;
+        --flamingo: #f2cdcd;
+        --pink: #f5c2e7;
+        --mauve: #cba6f7;
+        --red: #f38ba8;
+        --maroon: #eba0ac;
+        --peach: #fab387;
+        --yellow: #f9e2af;
+        --green: #a6e3a1;
+        --teal: #94e2d5;
+        --sky: #89dceb;
+        --sapphire: #74c7ec;
+        --blue: #89b4fa;
+        --lavender: #b4befe;
+        --text: #cdd6f4;
+        --subtext1: #bac2de;
+        --subtext0: #a6adc8;
+        --overlay2: #9399b2;
+        --overlay1: #7f849c;
+        --overlay0: #6c7086;
+        --surface2: #585b70;
+        --surface1: #45475a;
+        --surface0: #313244;
+        --base: #1e1e2e;
+        --mantle: #181825;
+        --crust: #11111b;
+    }
+}
+
 *, *:before, *:after {
     box-sizing: border-box;
 }
@@ -42,25 +74,18 @@ body {
     margin: 0;
 }
 
-
 nav {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     height: 5vh;
-    /* font-size: normal; */
-}
-
-nav a {
-    color: var(--text);
-    font-size: large;
 }
 
 a {
+    color: var(--lavender);
     text-decoration: none;
     font-weight: bold;
     position: relative;
-    /* display: inline-block; */
 }
 
 a::after {
@@ -83,6 +108,73 @@ a:hover {
     color: var(--pink);
 }
 
+nav a {
+    color: var(--text);
+    font-size: large;
+}
+
+p, ol, ul {
+    font-family: 'merriweather', sans-serif;
+    color: var(--text);
+    line-height: 2;
+}
+
+:is(h1, h2, h3, h4, h5, h6) {
+    font-family: 'questrial', sans-serif;
+    color: var(--mauve);
+}
+
+pre {
+    padding: 5px;
+    background: var(--mantle);
+    border: solid 2px var(--surface0);
+    overflow-x: auto;
+}
+
+code {
+    font-family: monospace;
+    color: var(--green);
+    word-wrap: break-word;
+    font-weight: bold;
+}
+
+code .code-comment {
+    color: var(--text);
+    font-weight: normal;
+}
+
+table {
+    border-collapse: collapse;
+    margin: 1em 0 2em 0;
+    border-radius: 10px 10px 0 0;
+    overflow: hidden;
+    text-align: left;
+    width: 100%;
+}
+
+thead tr {
+    color: var(--lavender);
+    background-color: var(--surface0);
+    font-weight: bold;
+}
+
+thead th, tbody td {
+    color: var(--text);
+    padding: 20px;
+}
+
+tbody tr {
+    border-bottom: 1px solid var(--surface2);
+}
+
+tbody tr:nth-of-type(even) {
+    background-color: var(--mantle);
+}
+
+tbody tr:last-of-type {
+    border-bottom: 2px solid var(--surface0);
+}
+
 /* Markdown to HTML Styling */
 .content {
     max-width: 768px;
@@ -101,100 +193,8 @@ a:hover {
     }
 }
 
-:is(h1, h2, h3, h4, h5, h6) {
-    font-family: 'questrial', sans-serif;
-    color: var(--mauve);
-}
-
-.content p, .content ol, .content ul {
-    font-family: 'merriweather', sans-serif;
-    color: var(--text);
-    line-height: 1.7;
-}
-
-.content pre {
-    padding: 5px;
-    background: var(--mantle);
-    border: solid 2px var(--lavender);
-    overflow-x: auto;
-}
-
-.content code {
-    font-family: monospace;
-    color: var(--yellow);
-    word-wrap: break-word;
-    font-weight: bold;
-}
-
-.content p code {
-    font-family: monospace;
-    color: var(--yellow);
-    font-weight: bold;
-}
-
-.content code span {
-    color: var(--overlay0);
-}
-
-.content table {
-    border-collapse: collapse;
-    margin: 1em 0 2em 0;
-    border-radius: 10px 10px 0 0;
-    overflow: hidden;
-    text-align: left;
-    table-layout: fixed;
-    width: 100%;
-}
-
-.content thead tr {
-    color: var(--lavender);
-    background-color: var(--surface0);
-    font-weight: bold;
-}
-
-.content thead th, tbody td {
-    color: var(--text);
-    padding: 20px;
-}
-
-.content tbody tr {
-    border-bottom: 1px solid var(--surface2);
-}
-
-.content tbody tr:nth-of-type(even) {
-    background-color: var(--mantle);
-}
-
-.content tbody tr:last-of-type {
-    border-bottom: 2px solid var(--surface0);
-}
-
-.content code span {
-    color: var(--overlay0);
-}
-
-.content a {
-    color: var(--lavender);
-    line-height: normal;
-}
-
-.content a:hover {
-    color: var(--pink);
-}
-
-.latest-posts {
-    margin: 0 0 10px 0;
-}
-
-.latest-posts p {
+/* Latest Post Styling*/
+.post p {
     font-family: 'Questrial', sans-serif;
     margin: 0;
-}
-
-.latest-posts a {
-    color: var(--text);
-}
-
-.latest-posts a:hover {
-    color: var(--pink);
 }
