--- a/templates/latest.html
+++ b/templates/latest.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
-{% block title %}Latest{% endblock title %}
+{% block title %}Latest Posts{% endblock title %}
 
 {% block body %}
-<h1> Latest </h1>
+<h1> Latest Posts</h1>
     {% for post in posts %}
-    <div class="latest-posts">
+    <div class="post">
         <a href="{{ post.href }}">{{ post.title }}</a>
         <p>{{ post.fdate }}</p>
     </div>
