--- a/templates/base.html
+++ b/templates/base.html
@@ -13,8 +13,6 @@
 </head>
 <nav>
     <a href="/index.html">Home</a>
-    <a href="/about.html">About Me</a>
-    <a href="/blog/latest.html">Blog</a>
     <a href="/resume.html">Resume</a>
     <a
         href="https://github.com/ollycodes" 
@@ -27,7 +25,9 @@
 <body>
     <div class="content">
         {% block body %}
-        {{ content|safe }}
+
+        {{ markdown_content|safe }}
+
         {% endblock body %}
     </div>
 </body>
