--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,7 @@
 {% extends 'base.html' %}
 
-{% block title %}Latest Posts{% endblock title %}
-
 {% block body %}
-<h1> Latest Posts</h1>
+    {{ markdown_content|safe }}
     {% for post in posts %}
     <div class="post">
         <a href="{{ post.href }}">{{ post.title }}</a>
