--- a/templates/base.html
+++ b/templates/base.html
@@ -7,19 +7,12 @@
     <link rel="stylesheet" type="text/css" href="/static/style.css"/>
     <link 
         rel="stylesheet" 
-        href="/static/catpuccin-mocha.css" 
-        media="(prefers-color-scheme: dark)"
-    />
-    <link 
-        rel="stylesheet" 
         href="https://fonts.googleapis.com/css2?family=Questrial&family=Merriweather"
     />
     <title>{% block title %}OllyCodes{% endblock title %}</title>
 </head>
 <nav>
     <a href="/index.html">Home</a>
-    <a href="/about.html">About Me</a>
-    <a href="/blog/latest.html">Blog</a>
     <a href="/resume.html">Resume</a>
     <a
         href="https://github.com/ollycodes" 
@@ -32,7 +25,9 @@
 <body>
     <div class="content">
         {% block body %}
-        {{ content|safe }}
+
+        {{ markdown_content|safe }}
+
         {% endblock body %}
     </div>
 </body>
