--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,9 @@
 {% extends 'base.html' %}
 
-{% block title %}Latest{% endblock title %}
-
 {% block body %}
-<h1> Latest </h1>
+    {{ markdown_content|safe }}
     {% for post in posts %}
-    <div class="latest-posts">
+    <div class="post">
         <a href="{{ post.href }}">{{ post.title }}</a>
         <p>{{ post.fdate }}</p>
     </div>
